--- a/dsm-community/index.html
+++ b/dsm-community/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>dsm-community</title>
+    <title>DSM Community</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
