--- a/dsm-community/index.html
+++ b/dsm-community/index.html
@@ -7,4 +7,21 @@
   <body>
     <div id="app"></div>
   </body>
+  <style>
+    body, html {
+      height: 100% !important;
+      width: 100%;
+      margin: 0;
+      padding:0;
+    }
+
+    body * {
+      box-sizing: border-box;
+      -ms-box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      outline: none;
+    }
+  </style>
 </html>
