--- a/dsm-community/index.html
+++ b/dsm-community/index.html
@@ -12,7 +12,7 @@
       height: 100% !important;
       width: 100%;
       margin: 0;
-      padding:0;
+      padding:0; 
     }
 
     body * {
@@ -22,6 +22,7 @@
       padding: 0;
       border: 0;
       outline: none;
+      font-family: "Nanum Gothic", sans-serif; 
     }
   </style>
 </html>
