--- a/dsm-community/index.html
+++ b/dsm-community/index.html
@@ -21,7 +21,7 @@
       padding: 0;
       border: 0;
       outline: none;
-      font-family: "Nanum Gothic", sans-serif; 
+      /*font-family: "Nanum Gothic", sans-serif; */
     }
   </style>
 </html>
