--- a/dsm-community/index.html
+++ b/dsm-community/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
     <title>DSM Community</title>
+    <script src="//cdn.ckeditor.com/4.6.2/full/ckeditor.js"></script>
   </head>
   <body>
     <div id="app"></div>
